// Vitest Snapshot v1

exports[`renders correctly with no users 1`] = `
<DocumentFragment>
  <div
    class="users__tabBody"
  >
    <div
      class="mobile-header"
    >
      <p>
        Users
      </p>
      <span
        class="open-filter"
        role="button"
      >
        <img
          alt=""
          src="/src/assets/images/filter.svg"
        />
      </span>
    </div>
    <table>
      <thead>
        <tr>
          <th>
            Organization 
            <span
              class="open-filter"
              role="button"
            >
              <img
                alt=""
                src="/src/assets/images/filter.svg"
              />
            </span>
          </th>
          <th>
            Username 
            <span
              class="open-filter"
              role="button"
            >
              <img
                alt=""
                src="/src/assets/images/filter.svg"
              />
            </span>
          </th>
          <th>
            Email 
            <span
              class="open-filter"
              role="button"
            >
              <img
                alt=""
                src="/src/assets/images/filter.svg"
              />
            </span>
          </th>
          <th>
            Phonenumber 
            <span
              class="open-filter"
              role="button"
            >
              <img
                alt=""
                src="/src/assets/images/filter.svg"
              />
            </span>
          </th>
          <th
            class="date"
          >
            Date joined 
            <span
              class="open-filter"
              role="button"
            >
              <img
                alt=""
                src="/src/assets/images/filter.svg"
              />
            </span>
          </th>
          <th>
            Status 
            <span
              class="open-filter"
              role="button"
            >
              <img
                alt=""
                src="/src/assets/images/filter.svg"
              />
            </span>
          </th>
          <th />
        </tr>
      </thead>
      <tbody />
    </table>
  </div>
</DocumentFragment>
`;

exports[`renders correctly with some users 1`] = `
<DocumentFragment>
  <div
    class="users__tabBody"
  >
    <div
      class="mobile-header"
    >
      <p>
        Users
      </p>
      <span
        class="open-filter"
        role="button"
      >
        <img
          alt=""
          src="/src/assets/images/filter.svg"
        />
      </span>
    </div>
    <table>
      <thead>
        <tr>
          <th>
            Organization 
            <span
              class="open-filter"
              role="button"
            >
              <img
                alt=""
                src="/src/assets/images/filter.svg"
              />
            </span>
          </th>
          <th>
            Username 
            <span
              class="open-filter"
              role="button"
            >
              <img
                alt=""
                src="/src/assets/images/filter.svg"
              />
            </span>
          </th>
          <th>
            Email 
            <span
              class="open-filter"
              role="button"
            >
              <img
                alt=""
                src="/src/assets/images/filter.svg"
              />
            </span>
          </th>
          <th>
            Phonenumber 
            <span
              class="open-filter"
              role="button"
            >
              <img
                alt=""
                src="/src/assets/images/filter.svg"
              />
            </span>
          </th>
          <th
            class="date"
          >
            Date joined 
            <span
              class="open-filter"
              role="button"
            >
              <img
                alt=""
                src="/src/assets/images/filter.svg"
              />
            </span>
          </th>
          <th>
            Status 
            <span
              class="open-filter"
              role="button"
            >
              <img
                alt=""
                src="/src/assets/images/filter.svg"
              />
            </span>
          </th>
          <th />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            data-name="organization"
          >
            Lendsqr
          </td>
          <td
            class="username"
            data-name="usename"
          >
            <a
              href="/users/1"
            >
              Darian Rolfson
            </a>
            <span
              class="status-span mobile"
            >
              Active
            </span>
          </td>
          <td
            data-name="email"
          >
            Maverick.Hyatt83@gmail.com
          </td>
          <td
            data-name="phoneumber"
          >
            03489488348934
          </td>
          <td
            class="date"
            data-name="date joined"
          >
            2009/02/27
          </td>
          <td
            class="status"
          >
            <span
              class="status-span"
            >
              Active
            </span>
          </td>
          <td
            class="action"
            data-name="action"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-12jzuas ant-btn-default ant-dropdown-trigger li dropdown-btn"
              type="button"
            >
              <img
                alt=""
                src="/src/assets/images/more.svg"
              />
              <span>
                 
              </span>
            </button>
          </td>
        </tr>
        <tr>
          <td
            data-name="organization"
          >
            Lendsqr
          </td>
          <td
            class="username"
            data-name="usename"
          >
            <a
              href="/users/2"
            >
              Darian Rolfson
            </a>
            <span
              class="status-span mobile"
            >
              Active
            </span>
          </td>
          <td
            data-name="email"
          >
            Maverick.Hyatt83@gmail.com
          </td>
          <td
            data-name="phoneumber"
          >
            03489488348934
          </td>
          <td
            class="date"
            data-name="date joined"
          >
            2009/02/27
          </td>
          <td
            class="status"
          >
            <span
              class="status-span"
            >
              Active
            </span>
          </td>
          <td
            class="action"
            data-name="action"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-12jzuas ant-btn-default ant-dropdown-trigger li dropdown-btn"
              type="button"
            >
              <img
                alt=""
                src="/src/assets/images/more.svg"
              />
              <span>
                 
              </span>
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;
